--- a/less/global.less
+++ b/less/global.less
@@ -24,6 +24,6 @@ p {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  margin: 96px auto;
 }
 
